# fernglas

./: .gitignore  Cargo.toml  README.md  config.example.yml  devenv.nix  flake.nix  index.html  init-db.sql  init-db2.sql
.github/workflows/: build.yml  docker.yml  manual.yml
0.1.0/: 404.html  searchindex.js  searchindex.json
0.1.0/appendix/: nixos-specialArgs-pattern.html
0.1.0/data-sources/: bgp-bird2.html
0.1.0/deployment/: docker.html  index.html  nixos.html
0.1.0/deployment/manual/: index.html
0.2.0/: print.html  searchindex.json
0.2.0/configuration/: bgp-bird2.html
0.2.1/: introduction.html
0.2.1/appendix/: index.html
0.2.1/deployment/: nixos.html
0.2.1/deployment/manual/: frontend.html  index.html
contrib/: print_communities.py
frontend/: config.yaml  package-lock.json  package.json  webpack.config.js
frontend/src/: cache.js  forceGraph.js  helpers.js  historyView.js  main.js  overlays.js  resultsView.js  router.js  search.js
frontend/static/: index.html  style.css
manual/: book.toml
manual/src/: SUMMARY.md  introduction.md
manual/src/appendix/: nixos-specialArgs-pattern.md
manual/src/configuration/: README.md  bgp-bird2.md
manual/src/data-sources/: README.md  bmp-junos.md
manual/src/deployment/: container.md  docker.md  nixos.md
manual/src/deployment/manual/: README.md  backend.md  frontend.md
nibbletree/: Cargo.toml
nibbletree/src/: lib.rs  node.rs  node_with_key.rs
nibbletree/tests/: rand.rs
src/: api.rs  bgp_collector.rs  bgpdumper.rs  bmp_collector.rs  communities.json  compressed_attrs.rs  config_check.rs  lib.rs  main.rs  node.rs  node_with_key.rs  rayon_take.rs  relay.rs  store.rs  store_impl.rs  table.rs  table_impl.rs
tests/: rand.rs
unstable/: 404.html  chapter_1.html  introduction.html  print.html  searchindex.js  searchindex.json
unstable/appendix/: index.html  nixos-specialArgs-pattern.html
unstable/configuration/: bgp-bird2.html  bmp-junos.html  index.html
unstable/data-sources/: bgp-bird2.html  bmp-junos.html  index.html
unstable/deployment/: container.html  docker.html  index.html  nixos.html
unstable/deployment/manual/: backend.html  frontend.html  index.html
