[package]
name = "fernglas"
description = "BGP & BMP looking glass"
version = "0.1.0"
edition = "2021"
default-run = "fernglas"
authors = [ "Yureka <yuka@yuka.dev>" ]
license = "EUPL-1.2"
repository = "https://github.com/wobcom/fernglas"

[dependencies]
anyhow = "1.0.68"
async-stream = "0.3.3"
async-trait = "0.1.61"
axum = { version = "0.6.2", default-features = false, features = ["query", "http1", "tokio"] }
bitvec = "1.0.1"
bytes = "1.3.0"
env_logger = "0.10.0"
futures-util = "0.3.25"
ipnet = { version = "2.7.1", features = ["serde"] }
log = "0.4.17"
mimalloc = { version = "0.1.34", optional = true }
rayon = "1.6.1"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["rt", "macros", "time", "rt-multi-thread", "io-util", "fs", "signal"] }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["codec"] }
weak-table = "0.3.2"
nibbletree = { version = "0.1.0", path = "./nibbletree", features = ["ipnet"] }
autometrics = { version = "0.3.0", features = ["prometheus-exporter"] }
zettabgp = "0.3.4"
hickory-resolver = "0.24.0"
include_dir = { version = "0.7.3", optional = true }
mime_guess = { version = "2.0.4", optional = true }
figment = { version = "0.10.12", features = ["yaml", "env"] }

[features]
embed-static = ["include_dir", "mime_guess"]
