[package]
name = "fernglas"
description = "BGP & BMP looking glass"
version = "0.2.0"
edition = "2021"
default-run = "fernglas"
authors = [ "Yureka <yuka@yuka.dev>" ]
license = "EUPL-1.2"
repository = "https://github.com/wobcom/fernglas"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.7", default-features = false, features = ["query", "http1", "tokio"] }
bitvec = "1.0"
bytes = "1.5"
env_logger = "0.11"
futures-util = "0.3"
ipnet = { version = "2.9", features = ["serde"] }
log = "0.4"
mimalloc = { version = "0.1", optional = true }
rayon = "1.8"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["macros", "time", "rt-multi-thread", "io-util", "signal"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
weak-table = "0.3"
nibbletree = { version = "0.2", path = "./nibbletree", features = ["ipnet"] }
autometrics = { version = "0.3", features = ["prometheus-exporter"] }
zettabgp = "0.3.4"
hickory-resolver = "0.24"
include_dir = { version = "0.7", optional = true }
mime_guess = { version = "2.0", optional = true }
figment = { version = "0.10", features = ["yaml", "env"] }

[features]
embed-static = ["include_dir", "mime_guess"]
