[package]
name = "nibbletree"
description = "Tree datastructure for versatile prefix lookups based on the Tree-bitmap algorithm"
version = "0.1.0"
edition = "2021"
authors = [ "Yureka <yuka@yuka.dev>" ]
license = "EUPL-1.2"
repository = "https://github.com/wobcom/fernglas"

[dependencies]
bitvec = "1.0.1"
ip_network = { version = "0.4.1", optional = true }
ipnet = { version = "2.7.1", optional = true }
thin-vec = "0.2.10"

[dev-dependencies]
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rstest = { version = "0.16.0", default-features = false }
rstest_reuse = { version = "0.5.0", default-features = false }
