[package]
name = "nibbletree"
description = "Tree datastructure for versatile prefix lookups based on the Tree-bitmap algorithm"
version = "0.2.0"
edition = "2021"
authors = [ "Yureka <yuka@yuka.dev>" ]
license = "EUPL-1.2"
repository = "https://github.com/wobcom/fernglas"

[dependencies]
bitvec = "1.0"
ip_network = { version = "0.4", optional = true }
ipnet = { version = "2.9", optional = true }
thin-vec = "0.2"

[dev-dependencies]
rand = "0.8"
rand_xoshiro = "0.6"
rstest = { version = "0.18", default-features = false }
rstest_reuse = { version = "0.6", default-features = false }
